# detl

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CLA.md  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cla.yml  pipeline.yml  release.yml
detl/: __init__.py  core.py  setup.py
detl/detl/: __init__.py  core.py
detl/detl/parsing/: __init__.py  common.py  dw4.py  dw5.py  utils.py
detl/parsing/: common.py  dw4.py  dw5.py  utils.py
docs/source/: 01_Basic_Use.nblink  02_Closest_Point_Lookup.nblink  conf.py  detl.rst  detl_core.rst  index.rst
notebooks/: 01_Basic_Use.ipynb  02_Closest_Point_Lookup.ipynb  README.md  closest_point_lookup.ipynb  data_plotting.ipynb
tests/: test_detl.py  tests.py
tests/data/: v4_20180726.Control.csv
tests/testfiles/: invalid.csv  v4_20180726.Control.csv  v5_short_CTPC06280.DO Calibration.csv  v5_short_CTPC06280.pH Calibration.csv
